Fixed widget spacing when proceeding a section

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -20,22 +20,33 @@
 .row:not(.widget):not(.row--width-no-padding) .row__container {
     margin-left: @site-margin;
     margin-right: @site-margin;
-    max-width: @site-container;
+    max-width: calc(@site-container + @site-padding * 2);
+    padding-left: @site-padding;
+    padding-right: @site-padding;
 
     @media @tablet {
-        margin-left: 0;
-        margin-right: 0;
-        padding-left: @site-padding;
-        padding-right: @site-padding;
+        max-width: 100%;
         width: 100%;
     }
 }
 
 
+// Adds spacing to a section when a widget follows it
+#page-zones__main > .row + .widget:not(.row) {
+    margin-top: 15px;
+}
+
+
+// Adds spacing to a widget when a section follows it
+#page-zones__main > .widget:not(.row) + .row {
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+
+
 // Readds spacing to the first widget in the zone - these values should replicate what was on the .main class in the template
 .edit #page-zones__main-overlay + .widget:not(.row),
-#page-zones__main > .widget:not(.row):first-child,
-#page-zones__main > .row + .widget:not(.row) {
+#page-zones__main > .widget:not(.row):first-child {
     margin-top: 50px;
     
     @media @tablet {
@@ -54,6 +65,11 @@
 body.edit #page-zones__main:empty {
     margin-top: 30px;
     margin-bottom: 30px;
+
+    @media @mobile {
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
 }
 
 
